syntax = "proto3";
import "mvpgate/Base.proto";

package cz.tyckouni.mvpgate.party;

option java_multiple_files = true;
option java_package = "cz.tyckouni.mvpgate.party.grpc";

service IdpService {
  rpc findByGuid(mvpgate.ByGuidRequest) returns (IdpGrpc) {}
}

message IdpGrpc {
  string guid = 1;
  string name = 2;
}